Fix problem with loading component. z-index needed

--- a/src/app/systelab-components/loading/loading-alternative.component.scss
+++ b/src/app/systelab-components/loading/loading-alternative.component.scss
@@ -1,3 +1,6 @@
+:host {
+  z-index: 9999999;
+}
 
 .double-bounce1, .double-bounce2 {
   width: 100%;
