--- a/src/app/systelab-components/loading/loading.component.scss
+++ b/src/app/systelab-components/loading/loading.component.scss
@@ -1,4 +1,8 @@
 
+:host {
+  z-index: 9999999;
+}
+
 .application-loader-spinner {
   width: 40px;
   height: 40px;
